--- a/index.html
+++ b/index.html
@@ -1,81 +1,128 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body {
-    font-family: "Lato", sans-serif;
-}
-
-.sidenav {
+body, html {
     height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
 }
 
-.sidenav a {
-    padding: 8px 8px 8px 32px;
+.parallax {
+    /* The image used */
+    background-image: url('parallax-img-1.jpg');opacity:0.8;
+
+    /* Full height */
+    height: 100%; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+div.first {
+    opacity: 0.1;
+    filter: alpha(opacity=10); /* For IE8 and earlier */
+    font-size: 20px;
+
+}
+.container {
+    width: 100%; /* Full width */
+    background-color: #ddd; /* Grey background */
+}
+
+.skills {
+    text-align: right; /* Right-align text */
+    padding-right: 20px; /* Add some right padding */
+    line-height: 40px; /* Set the line-height to center the text inside the skill bar, and to expand the height of the container */
+    color: white; /* White text color */
+}
+.html {width: 70%; background-color: #4CAF50;} /* Green */
+.css {width: 40%; background-color: #2196F3;} /* Blue */
+.cpp {width: 40%; background-color: #f44336;} /* Red */
+.java {width: 60%; background-color: #808080;} /* Dark Grey */
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
     text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
+    border-radius: 50%;
+    background: #3B5998;
+    color: white;
+}
+.fa-google {
+  background: #dd4b39;
+  color: white;
 }
 
-.sidenav a:hover {
-    color: #f1f1f1;
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+.contact{
+  font-size: 30px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  text-align: center;
 }
 
 </style>
 </head>
-<body background = "site-background.jpg">
+<body>
 
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">Home</a>
-  <a href="#">About</a>
-  <a href="#">Skills</a>
-  <a href="#">Contact</a>
+<div class="parallax"></div>
+
+<div style = "height:250px;text-align:center">
+  <p style = "font-size:25px;font-family:Arial;word-spacing:5px">About me</p>
+  <p style = "font-size:22px;font-family:Arial;opacity:0.6">Hi, everyone! My name is Kristina. I am student. I am 22 years old.
+    I love nautre, freedom and animals. My favorite animal is dog. I am from Niksic, Montengro. Let's scroll down and meet me.</p>
 </div>
 
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+<div class="parallax"></div>
 
+<div style = "height:500px">
+    <p style = "font-size:25px;font-family:Arial;word-spacing:5px;text-align:center">Skills</p>
+    <p>HTML</p>
+<div class="container">
+  <div class="skills html">70%</div>
+</div>
 
+<p>CSS</p>
+<div class="container">
+  <div class="skills css">40%</div>
+</div>
 
+<p>C++</p>
+<div class="container">
+  <div class="skills cpp">40%</div>
+</div>
 
-<script>
+<p>Java</p>
+<div class="container">
+  <div class="skills java">60%</div>
+</div>
+  </div>
+</div>
 
-function openNav() {
-    document.getElementById("mySidenav").style.width = "250px";
-}
+<div class="parallax"></div>
 
-function closeNav() {
-    document.getElementById("mySidenav").style.width = "0";
-}
+<footer>
+<div>  
+    <p class = "contact">Contact me</p>
+   <div class = "wrapper">
+    <a href="https://www.facebook.com/profile.php?id=100011553041148" class="fa fa-facebook"></a>
+    <a href="#" class = "fa fa-google"></a>
+    <a href="https://www.instagram.com/kristina_papic/" class="fa fa-instagram"></a></div>
+  </div>
+</footer>
 
-</script>
-     
 </body>
-</html> 
+</html>
