--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body, html {
 
 .parallax {
     /* The image used */
-    background-image: url('parallax-img-1.jpg');opacity:0.8;
+    background-image: url('https://www.pexels.com/photo/884781/');opacity:0.8;
 
     /* Full height */
     height: 100%; 
